swagger doc fix - all god
